--- a/libros-android/res/values/strings.xml
+++ b/libros-android/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Libros</string>
+    <string name="app_name">Libros App</string>
 </resources>
